Fixed table setting on smaller screens NAS-111727

--- a/src/app/pages/sharing/components/shares-dashboard/shares-dashboard.component.scss
+++ b/src/app/pages/sharing/components/shares-dashboard/shares-dashboard.component.scss
@@ -164,9 +164,10 @@
   justify-content: center;
 }
 
-
-
 @media screen and (max-width: 800px) {
+
+  $standard-table-height: 336px;
+
   .zero-table-container,
   .one-table-container,
   .two-table-container,
@@ -179,7 +180,26 @@
       'third'
       'fourth';
     grid-template-columns: 100%;
+  }
+
+  .zero-table-container {
     grid-template-rows: 58px 58px 58px 58px;
+  }
+
+  .one-table-container {
+    grid-template-rows: $standard-table-height 58px 58px 58px;
+  }
+
+  .two-table-container {
+    grid-template-rows: $standard-table-height $standard-table-height 58px 58px;
+  }
+
+  .three-table-container {
+    grid-template-rows: $standard-table-height $standard-table-height $standard-table-height 58px;
+  }
+
+  .four-table-container {
+    grid-template-rows: $standard-table-height $standard-table-height $standard-table-height $standard-table-height;
   }
   
   .zero-table-container .first,
